Finished own tests